cmd/tscc/testdata/compiler/GenericObjectLitReturnType.txtar
# Ported from tests/cases/compiler/genericObjectLitReturnType.ts by tools/portcase.
# DO NOT EDIT by hand; re-run the porter if the upstream baseline changes.
! exec tscc --target es2015 --lib es2015,dom --out-js genericObjectLitReturnType.js genericObjectLitReturnType.ts
stderr 'TS2454'
! exists genericObjectLitReturnType.js
! exists genericObjectLitReturnType.d.ts
! exists genericObjectLitReturnType.js.map

-- genericObjectLitReturnType.ts --
class X<T>
{
    f(t: T) { return { a: t }; }
}

 
var x: X<number>;
var t1 = x.f(5);
t1.a = 5; // Should not error: t1 should have type {a: number}, instead has type {a: T}
 
